--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -17,6 +17,83 @@
 .App-intro {
   font-size: large;
 }
+#break {
+  height: 50px
+}
+#arpeggio {
+  padding-bottom: 20px;
+  text-align: center;
+}
+#title {
+  font-size: 64px;
+}
+
+#countdown {
+  padding-left: 60px
+}
+
+#countdown-holder {
+  text-align: center;
+  width: 100%;
+}
+
+#record-in {
+  font-size: 20px;
+}
+
+.add-recording {
+  margin-top: 15px;
+}
+
+.loop {
+  width: 100%;
+}
+
+#recording-buttons {
+  padding-bottom: 5px;
+}
+
+.start-stop {
+  width: 30%;
+  margin-right: 5px;
+  
+}
+
+.three {
+  font-size: 32px;
+}
+
+#countdown-title {
+  padding-left: 30px
+}
+
+#container {
+  padding-left: 100px
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  background-image: './gai.png';
+}
+
+#img-holder {
+  position:absolute;
+  z-index:0;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+}
+#img {
+  width:100%;
+  height:100%;
+}
+
+#main {
+  background-image: url(http://cdn.pastemagazine.com/www/system/images/photo_albums/aditlo-grace-potter/large/photo_25322_0-37.jpg?1384968217);
+  background-size: 100% 1000px;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
