--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -21,11 +21,20 @@
   height: 50px
 }
 #arpeggio {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   text-align: center;
 }
 #title {
-  font-size: 64px;
+  font-size: 56px;
+}
+
+#col-holder {
+  background-color: #b3b3b3;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  
 }
 
 #countdown {
@@ -42,7 +51,7 @@
 }
 
 .add-recording {
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .loop {
@@ -88,6 +97,7 @@
 #img {
   width:100%;
   height:100%;
+  background-repeat: repeat-y;
 }
 
 #main {
